tests/baselines/reference/parserES5ComputedPropertyName6(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ComputedPropertyName6.ts(2,3): error TS1164: Computed property names are not allowed in enums.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ComputedPropertyName6.ts (1 errors) ====
    enum E {
      [e] = 1
      ~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }